--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,17 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"noImplicitAny": true,
-		"removeComments": true,
-		"preserveConstEnums": true,
-		"strictNullChecks": true,
-		"sourceMap": true,
-		"target": "es5",
-		"lib": [
-			"es5",
-			"es2015.iterable"
-		],
-		"types": [ "bluebird-global" ],
-		"noUnusedParameters": true,
-		"noUnusedLocals": true
-	},
-	"include": [
-		"typings/**/*.d.ts",
-		"lib/*.ts"
-	]
+  "compilerOptions": {
+    "module": "commonjs",
+    "declaration": true,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "strictNullChecks": true,
+    "sourceMap": true,
+    "target": "es2017",
+    "lib": ["esnext"],
+    "types": ["bluebird-global"],
+    "noUnusedParameters": true,
+    "noUnusedLocals": true
+  },
+  "include": ["typings/**/*.d.ts", "lib/*.ts"]
 }
