--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/chai-as-promised": "0.0.30",
     "@types/chai-string": "^1.1.30",
     "@types/mocha": "^2.2.41",
+    "@types/request-promise-native": "^1.0.17",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-string": "^1.3.0",
@@ -54,7 +55,7 @@
     "express": "^4.15.3",
     "lodash": "^4.17.2",
     "request": "^2.79.0",
-    "request-promise": "^4.2.2",
+    "request-promise-native": "^1.0.8",
     "typed-error": "^3.1.0"
   }
 }
