--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha": "^3.3.0",
     "mocha-junit-reporter": "^1.13.0",
     "tslint": "^4.5.1",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
@@ -48,13 +49,10 @@
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.54",
     "@types/node": "^6.0.48",
-    "@types/request": "^2.48.1",
-    "@types/request-promise-native": "^1.0.17",
+    "axios": "^0.19.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "lodash": "^4.17.2",
-    "request": "^2.79.0",
-    "request-promise-native": "^1.0.8",
     "typed-error": "^3.1.0"
   }
 }
